// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SignIn renders as expected 1`] = `
Array [
  <View
    accessibilityRole="tablist"
    style={
      Array [
        Object {
          "flexDirection": "row",
          "width": "100%",
        },
        Object {
          "marginBottom": 8,
        },
      ]
    }
  >
    <View
      accessibilityRole="tab"
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "padding": 12,
          },
          Object {
            "backgroundColor": "hsl(190, 95%, 30%)",
          },
          null,
          null,
          Array [
            Object {
              "backgroundColor": "hsl(210, 5%, 94%)",
              "borderTopColor": "hsl(210, 5%, 87%)",
              "borderTopWidth": 2,
              "flexBasis": 0,
              "flexGrow": 1,
              "padding": 12,
            },
            Object {
              "opacity": 1,
            },
            Object {
              "backgroundColor": "hsl(0, 0%, 100%)",
              "borderTopColor": "hsl(190, 95%, 30%)",
              "color": "hsl(190, 95%, 30%)",
            },
            null,
          ],
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "alignSelf": "center",
              "color": "hsl(0, 0%, 100%)",
              "fontSize": 16,
              "fontWeight": "700",
            },
            Array [
              Object {
                "color": "hsl(210, 25%, 25%)",
                "fontSize": 16,
                "fontWeight": "700",
              },
              undefined,
              Object {
                "backgroundColor": "hsl(0, 0%, 100%)",
                "borderTopColor": "hsl(190, 95%, 30%)",
                "color": "hsl(190, 95%, 30%)",
              },
            ],
          ]
        }
      >
        Sign In
      </Text>
    </View>
    <View
      accessibilityRole="tab"
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "padding": 12,
          },
          Object {
            "backgroundColor": "hsl(190, 95%, 30%)",
          },
          null,
          null,
          Array [
            Object {
              "backgroundColor": "hsl(210, 5%, 94%)",
              "borderTopColor": "hsl(210, 5%, 87%)",
              "borderTopWidth": 2,
              "flexBasis": 0,
              "flexGrow": 1,
              "padding": 12,
            },
            null,
            null,
            null,
          ],
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "alignSelf": "center",
              "color": "hsl(0, 0%, 100%)",
              "fontSize": 16,
              "fontWeight": "700",
            },
            Array [
              Object {
                "color": "hsl(210, 25%, 25%)",
                "fontSize": 16,
                "fontWeight": "700",
              },
              undefined,
              null,
            ],
          ]
        }
      >
        Create Account
      </Text>
    </View>
  </View>,
  <Text
    accessibilityRole="header"
    style={
      Array [
        Object {
          "color": "hsl(210, 50%, 10%)",
        },
        Object {
          "fontSize": 24,
          "fontWeight": "300",
          "lineHeight": 36,
        },
        undefined,
      ]
    }
  />,
  <View>
    <View
      accessibilityLabel="Username"
      accessibilityState={
        Object {
          "disabled": false,
        }
      }
      accessible={true}
      style={
        Array [
          Object {
            "alignItems": "flex-start",
          },
          Object {
            "fontSize": 16,
            "marginVertical": 4,
          },
        ]
      }
    >
      <Text
        accessibilityRole="text"
        style={
          Array [
            Object {
              "fontSize": 16,
              "fontWeight": "400",
              "marginHorizontal": 4,
              "marginVertical": 2,
            },
            Object {
              "color": "hsl(210, 50%, 10%)",
            },
            undefined,
          ]
        }
      >
        Username
      </Text>
      <View
        style={
          Object {
            "alignItems": "center",
            "borderColor": "hsl(0, 0%, 0%)",
            "borderRadius": 4,
            "borderWidth": 1,
            "flexDirection": "row",
            "lineHeight": 24,
            "padding": 8,
            "width": "100%",
          }
        }
        testID="amplify__text-field__input-container"
      >
        <TextInput
          accessible={true}
          autoCapitalize="none"
          editable={true}
          onBlur={[Function]}
          onChangeText={[Function]}
          placeholder="Username"
          style={
            Array [
              Object {
                "flexGrow": 1,
                "fontSize": 16,
              },
              undefined,
            ]
          }
        />
      </View>
    </View>
    <View
      accessibilityLabel="Password"
      accessibilityState={
        Object {
          "disabled": false,
        }
      }
      accessible={true}
      style={
        Array [
          Object {
            "alignItems": "flex-start",
          },
          Array [
            Object {},
            Object {
              "fontSize": 16,
              "marginVertical": 4,
            },
          ],
        ]
      }
    >
      <Text
        accessibilityRole="text"
        style={
          Array [
            Object {
              "fontSize": 16,
              "fontWeight": "400",
              "marginHorizontal": 4,
              "marginVertical": 2,
            },
            Object {
              "color": "hsl(210, 50%, 10%)",
            },
            undefined,
          ]
        }
      >
        Password
      </Text>
      <View
        style={
          Object {
            "alignItems": "center",
            "borderColor": "hsl(0, 0%, 0%)",
            "borderRadius": 4,
            "borderWidth": 1,
            "flexDirection": "row",
            "lineHeight": 24,
            "padding": 8,
            "width": "100%",
          }
        }
        testID="amplify__text-field__input-container"
      >
        <TextInput
          accessible={true}
          autoCapitalize="none"
          editable={true}
          onBlur={[Function]}
          onChangeText={[Function]}
          placeholder="Password"
          secureTextEntry={true}
          style={
            Array [
              Object {
                "flexGrow": 1,
                "fontSize": 16,
              },
              undefined,
            ]
          }
        />
        <View
          accessibilityRole="button"
          accessibilityState={
            Object {
              "disabled": false,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Array [
              null,
              null,
            ]
          }
        >
          <Image
            accessibilityRole="image"
            source={
              Object {
                "testUri": "../../../src/assets/icons/visibilityOff.png",
              }
            }
            style={
              Array [
                Object {
                  "height": 16,
                  "resizeMode": "contain",
                  "tintColor": undefined,
                  "width": 16,
                },
                Array [
                  Object {},
                  undefined,
                ],
              ]
            }
          />
        </View>
      </View>
    </View>
  </View>,
  <View
    accessibilityRole="button"
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "padding": 12,
        },
        Object {
          "backgroundColor": "hsl(190, 95%, 30%)",
        },
        null,
        null,
        Object {
          "marginVertical": 8,
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "alignSelf": "center",
            "color": "hsl(0, 0%, 100%)",
            "fontSize": 16,
            "fontWeight": "700",
          },
          undefined,
        ]
      }
    >
      Sign in
    </Text>
  </View>,
  <View>
    <View
      accessibilityRole="button"
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "padding": 12,
          },
          Object {
            "backgroundColor": "hsl(0, 0%, 100%)",
          },
          null,
          null,
          Object {
            "marginVertical": 8,
          },
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "alignSelf": "center",
              "color": "hsl(190, 95%, 30%)",
              "fontSize": 14,
            },
            undefined,
          ]
        }
      >
        Forgot your password?
      </Text>
    </View>
  </View>,
]
`;

exports[`SignIn renders as expected when hideSignUp is true 1`] = `
Array [
  <Text
    accessibilityRole="header"
    style={
      Array [
        Object {
          "color": "hsl(210, 50%, 10%)",
        },
        Object {
          "fontSize": 24,
          "fontWeight": "300",
          "lineHeight": 36,
        },
        undefined,
      ]
    }
  />,
  <View>
    <View
      accessibilityLabel="Username"
      accessibilityState={
        Object {
          "disabled": false,
        }
      }
      accessible={true}
      style={
        Array [
          Object {
            "alignItems": "flex-start",
          },
          Object {
            "fontSize": 16,
            "marginVertical": 4,
          },
        ]
      }
    >
      <Text
        accessibilityRole="text"
        style={
          Array [
            Object {
              "fontSize": 16,
              "fontWeight": "400",
              "marginHorizontal": 4,
              "marginVertical": 2,
            },
            Object {
              "color": "hsl(210, 50%, 10%)",
            },
            undefined,
          ]
        }
      >
        Username
      </Text>
      <View
        style={
          Object {
            "alignItems": "center",
            "borderColor": "hsl(0, 0%, 0%)",
            "borderRadius": 4,
            "borderWidth": 1,
            "flexDirection": "row",
            "lineHeight": 24,
            "padding": 8,
            "width": "100%",
          }
        }
        testID="amplify__text-field__input-container"
      >
        <TextInput
          accessible={true}
          autoCapitalize="none"
          editable={true}
          onBlur={[Function]}
          onChangeText={[Function]}
          placeholder="Username"
          style={
            Array [
              Object {
                "flexGrow": 1,
                "fontSize": 16,
              },
              undefined,
            ]
          }
        />
      </View>
    </View>
    <View
      accessibilityLabel="Password"
      accessibilityState={
        Object {
          "disabled": false,
        }
      }
      accessible={true}
      style={
        Array [
          Object {
            "alignItems": "flex-start",
          },
          Array [
            Object {},
            Object {
              "fontSize": 16,
              "marginVertical": 4,
            },
          ],
        ]
      }
    >
      <Text
        accessibilityRole="text"
        style={
          Array [
            Object {
              "fontSize": 16,
              "fontWeight": "400",
              "marginHorizontal": 4,
              "marginVertical": 2,
            },
            Object {
              "color": "hsl(210, 50%, 10%)",
            },
            undefined,
          ]
        }
      >
        Password
      </Text>
      <View
        style={
          Object {
            "alignItems": "center",
            "borderColor": "hsl(0, 0%, 0%)",
            "borderRadius": 4,
            "borderWidth": 1,
            "flexDirection": "row",
            "lineHeight": 24,
            "padding": 8,
            "width": "100%",
          }
        }
        testID="amplify__text-field__input-container"
      >
        <TextInput
          accessible={true}
          autoCapitalize="none"
          editable={true}
          onBlur={[Function]}
          onChangeText={[Function]}
          placeholder="Password"
          secureTextEntry={true}
          style={
            Array [
              Object {
                "flexGrow": 1,
                "fontSize": 16,
              },
              undefined,
            ]
          }
        />
        <View
          accessibilityRole="button"
          accessibilityState={
            Object {
              "disabled": false,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Array [
              null,
              null,
            ]
          }
        >
          <Image
            accessibilityRole="image"
            source={
              Object {
                "testUri": "../../../src/assets/icons/visibilityOff.png",
              }
            }
            style={
              Array [
                Object {
                  "height": 16,
                  "resizeMode": "contain",
                  "tintColor": undefined,
                  "width": 16,
                },
                Array [
                  Object {},
                  undefined,
                ],
              ]
            }
          />
        </View>
      </View>
    </View>
  </View>,
  <View
    accessibilityRole="button"
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "padding": 12,
        },
        Object {
          "backgroundColor": "hsl(190, 95%, 30%)",
        },
        null,
        null,
        Object {
          "marginVertical": 8,
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "alignSelf": "center",
            "color": "hsl(0, 0%, 100%)",
            "fontSize": 16,
            "fontWeight": "700",
          },
          undefined,
        ]
      }
    >
      Sign in
    </Text>
  </View>,
  <View>
    <View
      accessibilityRole="button"
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "padding": 12,
          },
          Object {
            "backgroundColor": "hsl(0, 0%, 100%)",
          },
          null,
          null,
          Object {
            "marginVertical": 8,
          },
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "alignSelf": "center",
              "color": "hsl(190, 95%, 30%)",
              "fontSize": 14,
            },
            undefined,
          ]
        }
      >
        Forgot your password?
      </Text>
    </View>
  </View>,
]
`;

exports[`SignIn renders as expected with an error 1`] = `
Array [
  <View
    accessibilityRole="tablist"
    style={
      Array [
        Object {
          "flexDirection": "row",
          "width": "100%",
        },
        Object {
          "marginBottom": 8,
        },
      ]
    }
  >
    <View
      accessibilityRole="tab"
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "padding": 12,
          },
          Object {
            "backgroundColor": "hsl(190, 95%, 30%)",
          },
          null,
          null,
          Array [
            Object {
              "backgroundColor": "hsl(210, 5%, 94%)",
              "borderTopColor": "hsl(210, 5%, 87%)",
              "borderTopWidth": 2,
              "flexBasis": 0,
              "flexGrow": 1,
              "padding": 12,
            },
            Object {
              "opacity": 1,
            },
            Object {
              "backgroundColor": "hsl(0, 0%, 100%)",
              "borderTopColor": "hsl(190, 95%, 30%)",
              "color": "hsl(190, 95%, 30%)",
            },
            null,
          ],
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "alignSelf": "center",
              "color": "hsl(0, 0%, 100%)",
              "fontSize": 16,
              "fontWeight": "700",
            },
            Array [
              Object {
                "color": "hsl(210, 25%, 25%)",
                "fontSize": 16,
                "fontWeight": "700",
              },
              undefined,
              Object {
                "backgroundColor": "hsl(0, 0%, 100%)",
                "borderTopColor": "hsl(190, 95%, 30%)",
                "color": "hsl(190, 95%, 30%)",
              },
            ],
          ]
        }
      >
        Sign In
      </Text>
    </View>
    <View
      accessibilityRole="tab"
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "padding": 12,
          },
          Object {
            "backgroundColor": "hsl(190, 95%, 30%)",
          },
          null,
          null,
          Array [
            Object {
              "backgroundColor": "hsl(210, 5%, 94%)",
              "borderTopColor": "hsl(210, 5%, 87%)",
              "borderTopWidth": 2,
              "flexBasis": 0,
              "flexGrow": 1,
              "padding": 12,
            },
            null,
            null,
            null,
          ],
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "alignSelf": "center",
              "color": "hsl(0, 0%, 100%)",
              "fontSize": 16,
              "fontWeight": "700",
            },
            Array [
              Object {
                "color": "hsl(210, 25%, 25%)",
                "fontSize": 16,
                "fontWeight": "700",
              },
              undefined,
              null,
            ],
          ]
        }
      >
        Create Account
      </Text>
    </View>
  </View>,
  <Text
    accessibilityRole="header"
    style={
      Array [
        Object {
          "color": "hsl(210, 50%, 10%)",
        },
        Object {
          "fontSize": 24,
          "fontWeight": "300",
          "lineHeight": 36,
        },
        undefined,
      ]
    }
  />,
  <View>
    <View
      accessibilityLabel="Username"
      accessibilityState={
        Object {
          "disabled": false,
        }
      }
      accessible={true}
      style={
        Array [
          Object {
            "alignItems": "flex-start",
          },
          Object {
            "fontSize": 16,
            "marginVertical": 4,
          },
        ]
      }
    >
      <Text
        accessibilityRole="text"
        style={
          Array [
            Object {
              "fontSize": 16,
              "fontWeight": "400",
              "marginHorizontal": 4,
              "marginVertical": 2,
            },
            Object {
              "color": "hsl(210, 50%, 10%)",
            },
            undefined,
          ]
        }
      >
        Username
      </Text>
      <View
        style={
          Object {
            "alignItems": "center",
            "borderColor": "hsl(0, 0%, 0%)",
            "borderRadius": 4,
            "borderWidth": 1,
            "flexDirection": "row",
            "lineHeight": 24,
            "padding": 8,
            "width": "100%",
          }
        }
        testID="amplify__text-field__input-container"
      >
        <TextInput
          accessible={true}
          autoCapitalize="none"
          editable={true}
          onBlur={[Function]}
          onChangeText={[Function]}
          placeholder="Username"
          style={
            Array [
              Object {
                "flexGrow": 1,
                "fontSize": 16,
              },
              undefined,
            ]
          }
        />
      </View>
    </View>
    <View
      accessibilityLabel="Password"
      accessibilityState={
        Object {
          "disabled": false,
        }
      }
      accessible={true}
      style={
        Array [
          Object {
            "alignItems": "flex-start",
          },
          Array [
            Object {},
            Object {
              "fontSize": 16,
              "marginVertical": 4,
            },
          ],
        ]
      }
    >
      <Text
        accessibilityRole="text"
        style={
          Array [
            Object {
              "fontSize": 16,
              "fontWeight": "400",
              "marginHorizontal": 4,
              "marginVertical": 2,
            },
            Object {
              "color": "hsl(210, 50%, 10%)",
            },
            undefined,
          ]
        }
      >
        Password
      </Text>
      <View
        style={
          Object {
            "alignItems": "center",
            "borderColor": "hsl(0, 0%, 0%)",
            "borderRadius": 4,
            "borderWidth": 1,
            "flexDirection": "row",
            "lineHeight": 24,
            "padding": 8,
            "width": "100%",
          }
        }
        testID="amplify__text-field__input-container"
      >
        <TextInput
          accessible={true}
          autoCapitalize="none"
          editable={true}
          onBlur={[Function]}
          onChangeText={[Function]}
          placeholder="Password"
          secureTextEntry={true}
          style={
            Array [
              Object {
                "flexGrow": 1,
                "fontSize": 16,
              },
              undefined,
            ]
          }
        />
        <View
          accessibilityRole="button"
          accessibilityState={
            Object {
              "disabled": false,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Array [
              null,
              null,
            ]
          }
        >
          <Image
            accessibilityRole="image"
            source={
              Object {
                "testUri": "../../../src/assets/icons/visibilityOff.png",
              }
            }
            style={
              Array [
                Object {
                  "height": 16,
                  "resizeMode": "contain",
                  "tintColor": undefined,
                  "width": 16,
                },
                Array [
                  Object {},
                  undefined,
                ],
              ]
            }
          />
        </View>
      </View>
    </View>
  </View>,
  <View
    accessibilityRole="alert"
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "hsl(0, 75%, 85%)",
          "flexDirection": "row",
          "paddingHorizontal": 4,
          "paddingVertical": 16,
          "width": "100%",
        },
        undefined,
      ]
    }
  >
    <Image
      accessibilityRole="image"
      source={
        Object {
          "testUri": "../../../src/assets/icons/error.png",
        }
      }
      style={
        Array [
          Object {
            "height": 20,
            "resizeMode": "contain",
            "tintColor": undefined,
            "width": 20,
          },
          Object {
            "margin": 4,
          },
        ]
      }
    />
    <Text
      style={
        Array [
          Object {
            "color": "hsl(0, 100%, 20%)",
            "flex": 1,
            "paddingHorizontal": 4,
          },
          undefined,
        ]
      }
    >
      An error!
    </Text>
  </View>,
  <View
    accessibilityRole="button"
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "padding": 12,
        },
        Object {
          "backgroundColor": "hsl(190, 95%, 30%)",
        },
        null,
        null,
        Object {
          "marginVertical": 8,
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "alignSelf": "center",
            "color": "hsl(0, 0%, 100%)",
            "fontSize": 16,
            "fontWeight": "700",
          },
          undefined,
        ]
      }
    >
      Sign in
    </Text>
  </View>,
  <View>
    <View
      accessibilityRole="button"
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "padding": 12,
          },
          Object {
            "backgroundColor": "hsl(0, 0%, 100%)",
          },
          null,
          null,
          Object {
            "marginVertical": 8,
          },
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "alignSelf": "center",
              "color": "hsl(190, 95%, 30%)",
              "fontSize": 14,
            },
            undefined,
          ]
        }
      >
        Forgot your password?
      </Text>
    </View>
  </View>,
]
`;
